  --section option. (See samples/ompi-core-template.ini for examples)

- New options:
  - --no-force
  - --no-reporter

- New MPI install INI params used to do *stuff* before and/or after an MPI
  Install (e.g., create a tarball, install on cluster):
  - before_install
  - before_install_timeout
  - after_install
  - after_install_timeout

- GNU Install before/after step parameters
  - before_configure
  - after_configure
  - before_make_all
  - after_make_all
  - before_make_check
  - after_make_check
  - before_make_install
  - after_make_install

- include_file(s) INI parameter - just like pre-processor "#include"
  directives

- trivial_tests_languages - comma separated list of languages to use
  for trivial tests (default: "c,c++,f77,f90").
- trivial_tests_mpicc - override default mpicc for Trivial test build
- trivial_tests_mpicxx - override default mpicxx for Trivial test build
- trivial_tests_mpif77 - override default mpif77 for Trivial test build
- trivial_tests_mpif90 - override default mpif90 for Trivial test build

- added parameter to Simple specify module: do_not_run.  If set to 1
  for a specific subsection (and the subsection is exclusive), then
  those tests will not be run.  Handy for explicitly specifying tests
  that exist but should *not* be run.

- added parameter alreadyinstalled_mpi_type.  Defaults to "OMPI", but
  can also be "MVAPICH".

- Added Functions::MPI::MVAPICH.pm.

- Added "skip_section" INI parameter. If it evaluates to true, the section
  is skipped.

- Added the below "threshold" INI parameters for Test run sections. Acceptable
  in the following formats where "D" is an integer: D% (percentage), D/D
  fraction, .D (decimal), and DD (integer count of number of tests). The first
  thershold to break, *breaks* out of the RunEngine loop of mpirun commands.
  - break_threshold_pass
  - break_threshold_fail
  - break_threshold_skipped
  - break_threshold_timeout